tweak main pages

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -109,7 +109,7 @@ BrainPad - GHI Electronics, LLC<br/>
 
 Email: support@brainpad.com<br/>
 Forum: [BrainPad Community Forum](https://forums.ghielectronics.com/c/brainpad/11)<br/>
-Phone: +1 (248) 397-8856<br/>
+Phone: +1 248-397-8856<br/>
 Hours: M-F 8am-4pm Eastern Timezone<br/>
 
 
