--- a/src/pages/impact.mdx
+++ b/src/pages/impact.mdx
@@ -9,7 +9,9 @@ hide_table_of_contents: true
 
 # PLAY | CODE | EXCEL
 
-STEM requires an evolving platform, not a toy, though you can still PLAY. BrainPad has been on a mission for years to excite everyone about understanding the digital world. Understanding technology and CODE is becoming part of every industry, and our daily lives. Learners can use the acquired knowledge to help them EXCEL in any field of study.
+STEM requires an evolving platform, not a toy, though you can still `PLAY`. BrainPad has been on a mission for years to excite everyone about understanding the digital world. Understanding technology and `CODE` is becoming part of every industry, and our daily lives. Learners can use the acquired knowledge to help them `EXCEL` in any field of study.
+
+Let us show you how BrainPad **Empowers Eductors**, **Excites Learners**, and **Impacts Communities**.
 
 ---
 
@@ -23,11 +25,11 @@ STEM requires an evolving platform, not a toy, though you can still PLAY. BrainP
     </iframe>
 </div>
 
-Whether you are a professional teacher or a homeschooling parent, the BrainPad is like no other, designed to give educators the necessary tools. Teachers can use the provided curriculum or develop their own plan of action that takes advantage of the supported programming options. At home and with or without any background in computer science, parents can simply follow the existing lesson plans where you and your student can both learn together.
+Whether you are a professional teacher or a homeschooling parent, the BrainPad is designed to give educators the necessary tools. Teachers can use the provided curriculum or develop their own plan of action that takes advantage of the supported programming options.
 
-While the BrainPad may look like other circuits on the outside, it is empowered by an ecosystem to learn like professional coders while keeping a simple learning curve. With several coding option, beginners follow easy steps to get started with learning block-type coding. Then when the learner is ready, they can move into more advanced options, like Python and .NET C# for some serious text-based coding. Our online lessons highlight how languages can differ in syntax but ultimately provide the same outcome.
+While the BrainPad may look like other circuits on the outside, it is empowered by an ecosystem. With several coding option, beginners follow easy steps to get started with learning block-type coding. Then when the learner is ready, they can move into more advanced options, like Python JavaScript.
 
-The BrainPad ecosystem includes a variety of exclusive accessory kits, eliminating the challenge of making the right selections. The BrainPad accessories include lesson plans and everything an educator needs to show students how to “make a robot dance!” and so much more!
+The BrainPad ecosystem includes a variety of exclusive accessory kits, eliminating the challenge of making the right selections.
 
 ---
 
@@ -41,9 +43,9 @@ The BrainPad ecosystem includes a variety of exclusive accessory kits, eliminati
     </iframe>
 </div>
 
-While coding can be done on a PC, students’ eyes light up the moment they see their code come to life on a circuit that they can touch. The instant gratification keeps students engaged and excited about coding. With technology taking over every aspect of our lives, students see the world around them differently once they realize there is code inside the microwave oven! Their use and understanding of “smart devices” have a different meaning after just a few BrainPad lessons.
+While coding can be done on a PC, students' eyes light up the moment they see their code come to life on a circuit that they can touch. The instant gratification keeps students engaged and excited about coding. With technology taking over every aspect of our lives, students see the world around them differently once they realize there is code inside the microwave oven! Their use and understanding of "smart devices" have a different meaning after just a few BrainPad lessons.
 
-Excitement about technology continues beyond the classroom with BrainPad by encouraging students to go outside structured learning at school and unleash their imagination at home. Some of the best million-dollar ideas were born at home, starting some of the largest tech companies. Do you have a million-dollar idea?
+Excitement about technology continues beyond the classroom with BrainPad by encouraging students to go outside structured learning at school and unleash their imagination at home. Some of the best million-dollar ideas were born at home, starting some of the largest tech companies.
 
 ---
 
@@ -59,7 +61,7 @@ Excitement about technology continues beyond the classroom with BrainPad by enco
 
 The impact of the US-based BrainPad is proven in communities around the world. Inspiring students from different areas of expertise and age segments to create their best digital future. Whether students dream of a technological career or not, the BrainPad is useful in enhancing skills in math, critical thinking, creative problem-solving, and collaboration. The multi-faceted BrainPad exposes students to a diverse array of subjects and its affordability works with every budget and pocketbook, making it a beneficial solution for STEAM initiatives in schools and communities everywhere. Excel with BrainPad and help lead the future!
 
-“How many students haven’t we exposed to technology yet?”, asks BrainPad founder – Gus Issa, who believes: “Tomorrow’s greatest ideas will stem from the digital knowledge we plant today.”
+**"How many students haven't we exposed to technology yet?"**, asks BrainPad founder - Gus Issa, who believes: **"Tomorrow's greatest ideas will stem from the digital knowledge we plant today."**
 
 ---
 
@@ -67,12 +69,16 @@ The impact of the US-based BrainPad is proven in communities around the world. I
 
 ![About Vision](pathname:///img/impact-whoarewe.png)
 
-We are passionate people who love, and take pride, in our accomplishments in coding STEM fields.
+We are passionate people who take pride in our global impact.
 
 <Button
   style={{ margin: "10px" }}
   label="About Us"
   link="about"
 />
-
+<Button
+  style={{ margin: "10px" }}
+  label="Impact"
+  link="impact"
+/>
 </div>
