--- a/docs/catalog/intro.mdx
+++ b/docs/catalog/intro.mdx
@@ -32,6 +32,16 @@ import "react-medium-image-zoom/dist/styles.css";
 </td>
 <td>
     <Zoom>
+    <img alt="brainpower" src="/img/catalog/arcade-v2-clip.jpg" />
+    </Zoom>
+    BrainClip Sensor Kit
+    <Button
+    style={{ margin: "10px" }}
+    label="BrainClip"
+    link="brainclip"
+    />
+</td><td>
+    <Zoom>
     <img alt="brainpower" src="/img/catalog/brainpower-front.png" />
     </Zoom>
     Power Backpack
@@ -81,9 +91,11 @@ Plu-and-Play Kits for BrainPad Pulse
 
 ---
 
-# Perfected in the USA
+
 
 <div style={{display: 'block',  justifyContent: 'center', alignItems: 'center', textAlign: 'center'}}>
+
+# Perfected in the USA
 
 ![USA Flag](pathname:///img/usa-flag.png)
 
