--- a/docs/catalog/pulse.mdx
+++ b/docs/catalog/pulse.mdx
@@ -10,7 +10,7 @@ import React from "react";
 import Zoom from "react-medium-image-zoom";
 import "react-medium-image-zoom/dist/styles.css";
 
-# Pulse
+# BrainPad Pulse
 
 
 <div style={{ textAlign: "center" }}>
