--- a/docs/catalog/arcade.mdx
+++ b/docs/catalog/arcade.mdx
@@ -10,7 +10,7 @@ import React from "react";
 import Zoom from "react-medium-image-zoom";
 import "react-medium-image-zoom/dist/styles.css";
 
-# Arcade
+# BrainPad Arcade
 
 
 <div style={{ textAlign: "center" }}>
