--- a/src/pages/community.mdx
+++ b/src/pages/community.mdx
@@ -13,7 +13,7 @@ hide_table_of_contents: true
   }}
 >
 
-## These partnerships are some of the examples of how we are impacting future generations.
+## These partnerships are some of the examples of how we are impacting communities.
 <Button
   style={{ margin: "10px" }}
   label="Impact"
@@ -133,6 +133,10 @@ Ballarpur Institute Of Technology(BIT) is a technical institution which is appro
   style={{ margin: "10px" }}
   label="About Us"
   link="about"
+/><Button
+  style={{ margin: "10px" }}
+  label="Impact"
+  link="impact"
 />
 </p>
 
