--- a/src/pages/impact.mdx
+++ b/src/pages/impact.mdx
@@ -78,7 +78,7 @@ We are passionate people who take pride in our global impact.
 />
 <Button
   style={{ margin: "10px" }}
-  label="Impact"
-  link="impact"
+  label="Community"
+  link="community"
 />
 </div>
