fix broken website

--- a/docs/catalog/intro.mdx
+++ b/docs/catalog/intro.mdx
@@ -32,6 +32,17 @@ import "react-medium-image-zoom/dist/styles.css";
 </td>
 <td>
     <Zoom>
+    <img alt="brainclip" src="/img/catalog/arcade-v2-clip.jpg" />
+    </Zoom>
+    Power Backpack
+    <Button
+    style={{ margin: "10px" }}
+    label="BrainClip"
+    link="brainclip"
+    />
+</td>
+<td>
+    <Zoom>
     <img alt="brainpower" src="/img/catalog/brainpower-front.png" />
     </Zoom>
     Power Backpack
@@ -58,33 +69,11 @@ import "react-medium-image-zoom/dist/styles.css";
 
 ---
 
-## Pulse Kits
-
 
 
 <div style={{display: 'block',  justifyContent: 'center', alignItems: 'center', textAlign: 'center'}}>
 
-<table>
-<td>
-
-![Pulse Kits](pathname:///img/pulse-kits.png)
-Plu-and-Play Kits for BrainPad Pulse 
-<Button
-    style={{ margin: "10px" }}
-    label="Pulse Kits"
-    link="pulse-kits"
-    />
-</td>
-</table>
-
-</div>
-
----
-
-# Perfected in the USA
-
-<div style={{display: 'block',  justifyContent: 'center', alignItems: 'center', textAlign: 'center'}}>
-
+## Perfected in the USA
 ![USA Flag](pathname:///img/usa-flag.png)
 
 We are proud to have perfected the BrainPad in our USA headquarters.
