--- a/src/pages/community.mdx
+++ b/src/pages/community.mdx
@@ -12,21 +12,15 @@ hide_table_of_contents: true
     padding: "10px 0px 1px 0px",
   }}
 >
-# Let us be a part of your next STEM initiatives 
-<Button
-  style={{ margin: "10px" }}
-  label="Catalog"
-  link="/docs/catalog/intro"
-/>
-<Button
-  style={{ margin: "10px" }}
-  label="About Us"
-  link="about"
-/>
-</p>
 
-These partnerships, with corporations and non-profits, are some of the examples of how we can help the next generations.<br/>
-Coding STEM is a passion for us!
+## These partnerships are some of the examples of how we are impacting communities.
+<Button
+  style={{ margin: "10px" }}
+  label="Impact"
+  link="impact"
+/>
+
+</p>
 
 ---
 
@@ -121,5 +115,29 @@ EBM strongly values human development as it is critical to a country’s surviva
 ![Ballarpur](pathname:///img/partner-bit.png)
 
 Ballarpur Institute Of Technology(BIT) is a technical institution which is approved by AICTE (All India Council of Technical Education), New Delhi and has got the approval from Govt. of Maharashtra. BrainPad is designed to inspire and create future innovators.
+
+---
+
+
+<p
+  style={{
+    backgroundColor: "Moccasin",
+    color: "black",
+    padding: "10px 0px 1px 0px",
+  }}
+>
+
+
+## Let us be a part of your next STEM initiatives.
+<Button
+  style={{ margin: "10px" }}
+  label="About Us"
+  link="about"
+/><Button
+  style={{ margin: "10px" }}
+  label="Impact"
+  link="impact"
+/>
+</p>
 
 </div>
