--- a/src/pages/impact.mdx
+++ b/src/pages/impact.mdx
@@ -23,11 +23,11 @@ STEM requires an evolving platform, not a toy, though you can still PLAY. BrainP
     </iframe>
 </div>
 
-Whether you are a professional teacher or a homeschooling parent, the BrainPad is like no other, designed to give educators the necessary tools. Teachers can use the provided curriculum or develop their own plan of action that takes advantage of the supported programming options. At home and with or without any background in computer science, parents can simply follow the existing lesson plans where you and your student can both learn together.
+Whether you are a professional teacher or a homeschooling parent, the BrainPad is designed to give educators the necessary tools. Teachers can use the provided curriculum or develop their own plan of action that takes advantage of the supported programming options.
 
-While the BrainPad may look like other circuits on the outside, it is empowered by an ecosystem to learn like professional coders while keeping a simple learning curve. With several coding option, beginners follow easy steps to get started with learning block-type coding. Then when the learner is ready, they can move into more advanced options, like Python and .NET C# for some serious text-based coding. Our online lessons highlight how languages can differ in syntax but ultimately provide the same outcome.
+While the BrainPad may look like other circuits on the outside, it is empowered by an ecosystem. With several coding option, beginners follow easy steps to get started with learning block-type coding. Then when the learner is ready, they can move into more advanced options, like Python JavaScript.
 
-The BrainPad ecosystem includes a variety of exclusive accessory kits, eliminating the challenge of making the right selections. The BrainPad accessories include lesson plans and everything an educator needs to show students how to “make a robot dance!” and so much more!
+The BrainPad ecosystem includes a variety of exclusive accessory kits, eliminating the challenge of making the right selections.
 
 ---
 
@@ -41,9 +41,9 @@ The BrainPad ecosystem includes a variety of exclusive accessory kits, eliminati
     </iframe>
 </div>
 
-While coding can be done on a PC, students’ eyes light up the moment they see their code come to life on a circuit that they can touch. The instant gratification keeps students engaged and excited about coding. With technology taking over every aspect of our lives, students see the world around them differently once they realize there is code inside the microwave oven! Their use and understanding of “smart devices” have a different meaning after just a few BrainPad lessons.
+While coding can be done on a PC, students' eyes light up the moment they see their code come to life on a circuit that they can touch. The instant gratification keeps students engaged and excited about coding. With technology taking over every aspect of our lives, students see the world around them differently once they realize there is code inside the microwave oven! Their use and understanding of "smart devices" have a different meaning after just a few BrainPad lessons.
 
-Excitement about technology continues beyond the classroom with BrainPad by encouraging students to go outside structured learning at school and unleash their imagination at home. Some of the best million-dollar ideas were born at home, starting some of the largest tech companies. Do you have a million-dollar idea?
+Excitement about technology continues beyond the classroom with BrainPad by encouraging students to go outside structured learning at school and unleash their imagination at home. Some of the best million-dollar ideas were born at home, starting some of the largest tech companies.
 
 ---
 
@@ -68,7 +68,7 @@ The impact of the US-based BrainPad is proven in communities around the world. I
   }}
 >
 
-"How many students haven’t we exposed to technology yet?", asks BrainPad founder – Gus Issa, who believes: Tomorrow’s greatest ideas will <strong>stem</strong> from the digital knowledge we plant today.
+**"How many students haven’t we exposed to technology yet?"**, asks BrainPad founder – Gus Issa, who believes: **Tomorrow's greatest ideas will <strong>stem</strong> from the digital knowledge we plant today.**
 </p>
 
 
@@ -78,8 +78,13 @@ The impact of the US-based BrainPad is proven in communities around the world. I
 
 ![About Vision](pathname:///img/impact-whoarewe.png)
 
-We are passionate people who love, and take pride, in our accomplishments in coding STEM fields.
+We are passionate people who take pride in our global community impact.
 
+<Button
+  style={{ margin: "10px" }}
+  label="Community"
+  link="community"
+/>
 <Button
   style={{ margin: "10px" }}
   label="About Us"
