--- a/docs/resources/makecode-arcade.mdx
+++ b/docs/resources/makecode-arcade.mdx
@@ -17,7 +17,7 @@ Microsoft MakeCode Arcade goes hand in hand with BrainPad Arcade to create an ex
 
 ## Plug it in
 
-To get going with the BrainPad Arcade, let’s try programming it to show a pizza sprite on the screen. Go ahead and plug the BrainPad Arcade into your computer and follow the steps below.
+To get going with the BrainPad Arcade, let's try programming it to show a pizza sprite on the screen. Go ahead and plug the BrainPad Arcade into your computer and follow the steps below.
 
 ![USB Insert](pathname:///img/arcade-usb-insert.gif)
 
@@ -29,7 +29,7 @@ Then, click on Sprites and then drag the Set sprite block to the green “on sta
 
 ![Add Blocks](pathname:///img/arcade-add-blocks.gif)
 
-If the simulator is not “playing”, click the play button and now you will see the sprite you added in the middle of the simulator’s screen.
+If the simulator is not “playing”, click the play button and now you will see the sprite you added in the middle of the simulator's screen.
 
 ## Prep the Device
 
@@ -41,9 +41,124 @@ After you connected the BrainPad Arcade earlier, your PC should have detected a 
 
 Click download and save the file on the “ARCADE-F4” drive. The Green light will flash for a moment and the BrainPad will make the same sound you heard on the computer earlier. If you are using the Chrome browser, it is possible to sync the board so the file will download automatically to your board.
 
-If you are using the Chrome browser, you may get prompted to sync your device. This will allow to you to download the file directly onto the device.
-
 ---
 
 ## Lessons
 
+The [MakeCode Arcade platform](https://arcade.makecode.com/) already include several lessons and examples, but we also have our own!
+
+### 2D Adventure
+
+![2D Adventure](pathname:///img/res/arcade/2d-adventure.gif)
+
+You only get 30 seconds to find the hamburger!
+
+The lessons are PowerPoint presentations, and include animations.
+
+<Button
+  style={{ margin: "10px" }}
+  label="2D Adventure"
+  link="/docs/resources/lessons/2d-adventure"
+/>
+
+---
+
+### Space Shooter
+
+![Space shooter](pathname:///img/res/arcade/space-shooter.gif)
+
+Shoot them all!
+
+The lessons include PowerPoint presentations, PDFs, and videos.
+
+<Button
+  style={{ margin: "10px" }}
+  label="Space Shooter"
+  link="/docs/resources/lessons/space-shooter"
+/>
+
+---
+
+### Edge Pads
+
+![](pathname:///img/res/arcade/ec_13.jpg)
+
+Let's play with colors using the Edge Pads and an RGB LED.
+
+<Button
+  style={{ margin: "10px" }}
+  label="Edge Connectors"
+  link="/docs/resources/lessons/edge-pads"
+/>
+
+---
+
+### Analog vs Digital
+
+![Analog vs Digital](pathname:///img/res/arcade/ana-vs-digi.jpg)
+
+Add more fun to colors using PINs
+
+<Button
+  style={{ margin: "10px" }}
+  label="Analog vs Digital"
+  link="/docs/resources/lessons/analog-vs-digital"
+/>
+
+---
+
+### LED Ring
+
+![LED Ring](pathname:///img/res/arcade/led-ring.png)
+
+Upgrading your games with extra lights!
+
+<Button
+  style={{ margin: "10px" }}
+  label="Led Ring"
+  link="/docs/resources/lessons/led-ring"
+/>
+
+---
+
+### Motion Sensing
+
+
+![LED Ring](pathname:///img/res/arcade/motion-sense.gif)
+
+
+Add physical movement sensing to your game!
+
+<Button
+  style={{ margin: "10px" }}
+  label="Motion Sensor"
+  link="/docs/resources/lessons/motion-sense"
+/>
+
+---
+
+### Light Sensing
+
+![LED Ring](pathname:///img/res/arcade/light-sense.gif)
+
+Measure light level.
+
+<Button
+  style={{ margin: "10px" }}
+  label="Light Sensor"
+  link="/docs/resources/lessons/light-sense"
+/>
+
+---
+
+### Sounds Sensing
+
+![Sound Sensing](pathname:///img/res/arcade/sound-sense.gif)
+
+Control your projects with sounds.
+
+<Button
+  style={{ margin: "10px" }}
+  label="Sound Sensor"
+  link="/docs/resources/lessons/sound-sense"
+/>
