improve support and legal

--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -7,26 +7,37 @@ hide_table_of_contents: true
 # Support
 
 ---
-Hello Educators 
-
-# Frequently Asked Questions
 
 <details>
-  <summary>FAQ 1</summary>
+  <summary>Can you make a custom circuit for me?</summary>
 
-  Hello World
-  
+  Absolutely! Our parent company, GHI Electronics, has been engineering and manufacturing electronics for over 25 years! https://www.ghielectronics.com/
+
 </details>
 
 <details>
-  <summary>FAQ 2</summary>
+  <summary>Can I contribute or comment on ths website?</summary>
 
-  Hello World
+  Yes, it is on this repo https://github.com/brainpad-board/brainpad-website
   
 </details>
 <details>
-  <summary>FAQ 3</summary>
+  <summary>Where are the hardware design files?</summary>
 
-  Hello World
+  You can find them here https://github.com/brainpad-board/hardware
   
 </details>
+
+---
+
+## Community Forum
+
+![Forum](pathname:///img/forum.jpg)
+
+The GHI Electronics community forums include a BrainPad section. Jump in and share what you are working on.
+
+<Button
+  style={{ margin: "10px" }}
+  label="Community Forum"
+  link="https://forums.ghielectronics.com/c/brainpad/11"
+/>
