--- a/docs/legal.mdx
+++ b/docs/legal.mdx
@@ -9,7 +9,9 @@ pagination_prev: null
 
 ## License
 
-Except where otherwise noted, this website's provided lessons and materials by BrainPad, LLC is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.
+Except where otherwise noted, this website's provided lessons and materials by BrainPad, LLC is licensed under a [Creative Commons Attribution-ShareAlike 4.0 International License](https://creativecommons.org/licenses/by-sa/4.0/).
+
+![CC BY SA](pathname:///img/cc-by-sa.png)
 
 ## Disclaimer
 
