--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -56,12 +56,12 @@ To give everyone the necessary skills required to understand the ever-growing ne
 
 ![About Mission](pathname:///img/about-mission.jpg)
 
-To empower educators in making programming gratifying and accessible to all learners.
+To empower educators in making programming gratifying and accessible to all learners in a global community.
 
 <Button
   style={{ margin: "10px" }}
-  label="Events"
-  link="events"
+  label="Community"
+  link="community"
 />
 
 
