many tweaks on catalog and page direct

--- a/docs/catalog/arcade.mdx
+++ b/docs/catalog/arcade.mdx
@@ -67,6 +67,7 @@ import "react-medium-image-zoom/dist/styles.css";
 📄[Schematics](pathname:///sch/gdl-acfan-b.pdf)<br/>
 🔩[3D STEP file](pathname:///3d/gdl-acfan-b.step)<br/>
 </td></table>
+
 <div class="videocontainer">
     <iframe class="responsive-width" 
         src="https://www.youtube.com/embed/0nTYkD6aCSc" 
@@ -82,9 +83,6 @@ import "react-medium-image-zoom/dist/styles.css";
 ![MakeCode Arcade](pathname:///img/makecode-arcade.jpg)
 
 Create games with an Internet browser using Microsoft MakeCode Arcade. Program in Blocks, JavaScript, or Python.
-
----
-## Create and Play!
 
 ![Falling Duck](pathname:///img/falling-duck.gif)
 
@@ -102,7 +100,7 @@ image
 
 The BrainPower backpack is another elegant option for powering BrainPad Arcade. See [BrainPower](brainpower) page to learn more.
 
-![Falling Duck Play](pathname:///img/catalog/brainpower-arcade-front45.jpg)
+![BrainPower](pathname:///img/catalog/brainpower-arcade-front45.jpg)
 
 ---
 
@@ -118,4 +116,4 @@ The BrainPower backpack is another elegant option for powering BrainPad Arcade. 
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| BrainPad Arcade Microcomputer   | BPC-ARCADE-AR2B | $39.95 | <Button  style={{ margin: "10px" }}  label="Buy on Amazon"  link="https://www.amazon.com/dp/B0CL4ZCN53"/>
+| BrainPad Arcade Microcomputer   | BPC-ARCADE-AR2B | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
