--- a/docs/catalog/brainbot.mdx
+++ b/docs/catalog/brainbot.mdx
@@ -15,66 +15,67 @@ import "react-medium-image-zoom/dist/styles.css";
 <div style={{ textAlign: "center" }}>
 
 <Zoom>
-<img alt="Main" width="75%" src="/img/catalog/brainbot-front45.png" />
+<img alt="Main" width="75%" src="/img/catalog/brainbot-kit.png" />
 </Zoom>
 
   <table>
     <td>
       <Zoom>
-        <img alt="Back" src="/img/catalog/arcade-v2-back.jpg" />
+        <img alt="Back" src="/img/catalog/brainbot-top.png" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Size" src="/img/catalog/arcade-v2-clip.jpg" />
+        <img alt="Size" src="/img/catalog/brainbot-front.png" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Front" src="/img/catalog/arcade-v2-front45.jpg" />
+        <img alt="Front" src="/img/catalog/brainbot-incase.png" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Back" src="/img/catalog/arcade-v2-packaging.png" />
+        <img alt="Back" src="/img/catalog/brainbot-front45.png" />
       </Zoom>
     </td>
   </table>
-  <p>**BrainPad Arcade V2 Microcomputer**</p>
+  <p>**Robotics and AI kit with multiple sensors**</p>
 </div>
 
 
 
 ---
 
-“Don’t just play games, make them” is the mentality behind BrainPad Arcade. With the full support of <strong>Microsoft MakeCode Arcade</strong>, users can build hundreds of arcade-style games. Go beyond games to use sensors and learn about circuits, or even build robots!
+BrainBot includes everything needed to get you started on coding robots. It works hand in hand with the lesson plans and give users options, from newbies to experts. Minor assembly is required.
+
 <table><td width='50%'>
 **Key features**
 
-• Microsoft MakeCode Arcade Ready.<br/>
-• 1.8″ 160×120 Color Display.<br/>
-• Jacdac Connector.<br/>
-• DUELink Connector.<br/>
-• Alligator-Clip Pads to Connect Circuits.<br/>
-• Buzzer Speaker.<br/>
-• 8x User Buttons.<br/>
-• Includes USB Cable.<br/>
-• Includes Carrying Case.<br/>
+• Line detector for following lines and detecting boundaries.<br/>
+• Distance sensor for object detection.<br/>
+• Color headlight LEDs.<br/>
+• 2x individually controlled body LEDs.<br/>
+• Buzzer for generating sounds.<br/>
+• Infrared receiver for the remote control.<br/>
+
 </td><td width='50%'>
-**Resources**
 
-📄[Schematics](pathname:///sch/gdl-acfan-b.pdf)<br/>
-🔩[3D STEP file](pathname:///3d/gdl-acfan-b.step)<br/>
+**Kit Content**
+
+• Robot chassis.<br/>
+• 2x Motors.<br/>
+• 2x Motor mounts.<br/>
+• 2x Wheels.<br/>
+• 8x Rivets.<br/>
+• Front caster wheel.<br/>
+• Rechargeable battery.<br/>
+• Remote control (battery included).<br/>
+• Line Map.<br/>
+• USB cable.<br/>
+• Reusable case.<br/>
+
 </td></table>
-<div class="videocontainer">
-    <iframe class="responsive-width" 
-        src="https://www.youtube.com/embed/0nTYkD6aCSc" 
-        frameborder="0"
-        allowfullscreen>
-    </iframe>
-</div>
-
----
 
 ---
 
@@ -90,4 +91,4 @@ import "react-medium-image-zoom/dist/styles.css";
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| BrainPad Arcade Microcomputer   | BPC-ARCADE-AR2B | $39.95 | <Button  style={{ margin: "10px" }}  label="Buy on Amazon"  link="https://www.amazon.com/dp/B0CL4ZCN53"/>
+| BrainBot Kit   | BPK-BOT-2 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
