--- a/docs/catalog/braingamer.mdx
+++ b/docs/catalog/braingamer.mdx
@@ -40,41 +40,34 @@ import "react-medium-image-zoom/dist/styles.css";
       </Zoom>
     </td>
   </table>
-  <p>**BrainPad Arcade V2 Microcomputer**</p>
+  <p>**Gaming controller with rechargeable battery**</p>
 </div>
 
 
 
 ---
 
-“Don’t just play games, make them” is the mentality behind BrainPad Arcade. With the full support of <strong>Microsoft MakeCode Arcade</strong>, users can build hundreds of arcade-style games. Go beyond games to use sensors and learn about circuits, or even build robots!
+We think you will find the best game out there is the game you make yourself. BrainGamer also includes a large rechargeable battery letting it run wire-free for hours.
+
 <table><td width='50%'>
 **Key features**
 
-• Microsoft MakeCode Arcade Ready.<br/>
-• 1.8″ 160×120 Color Display.<br/>
-• Jacdac Connector.<br/>
-• DUELink Connector.<br/>
-• Alligator-Clip Pads to Connect Circuits.<br/>
-• Buzzer Speaker.<br/>
-• 8x User Buttons.<br/>
-• Includes USB Cable.<br/>
-• Includes Carrying Case.<br/>
+• Buzzer for generating sounds.<br/>
+• Vibrator for haptic feedback.<br/>
+• Rechargeable battery that runs all day.<br/>
+• Analog rocker for X and Y movements.<br/>
+• 4x buttons.<br/>
+
 </td><td width='50%'>
-**Resources**
+**Kit Content**
 
-📄[Schematics](pathname:///sch/gdl-acfan-b.pdf)<br/>
-🔩[3D STEP file](pathname:///3d/gdl-acfan-b.step)<br/>
+• Base circuit.<br/>
+• Acrylic handles.<br/>
+• Screws and nuts.<br/>
+• Screwdriver.<br/>
+• Rechargeable battery.<br/>
+
 </td></table>
-<div class="videocontainer">
-    <iframe class="responsive-width" 
-        src="https://www.youtube.com/embed/0nTYkD6aCSc" 
-        frameborder="0"
-        allowfullscreen>
-    </iframe>
-</div>
-
----
 
 ---
 
@@ -86,8 +79,9 @@ import "react-medium-image-zoom/dist/styles.css";
   }}
 >
   ## Ordering Info
+
 </p>
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| BrainPad Arcade Microcomputer   | BPC-ARCADE-AR2B | $39.95 | <Button  style={{ margin: "10px" }}  label="Buy on Amazon"  link="https://www.amazon.com/dp/B0CL4ZCN53"/>
+| BrainGamer Kit   | BPK-GMR-2 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
