--- a/docs/catalog/brainpower.mdx
+++ b/docs/catalog/brainpower.mdx
@@ -46,37 +46,26 @@ import "react-medium-image-zoom/dist/styles.css";
 
 ---
 
-<Tabs className="unique-tabs" groupid = "catalog" queryString="show" defaultValue="overview"
-  values={[
-    {label: 'Overview', value: 'overview'},
-    {label: 'Projects', value: 'projects'},
-  ]}>
-
-<TabItem value="overview">
 Take your Arcade on-the-go with this rechargeable battery option. It includes a haptic-feedback vibrating  motor. But wait, this power “backpack” can turn your Arcade into a badge or a giant wrist watch! 
 
 <table><td width='50%'>
 **Key features**
 
 • Rechargeable battery.<br/>
+• Buzzer for making sounds.<br/>
 • Vibrator motor for haptic feedback.<br/>
 • Wearable!<br/>
 
 </td><td width='50%'>
-**Resources**
+**Kit Content**
 
-📄[Schematics](pathname:///sch/gdl-acfan-b.pdf)<br/>
-🔩[3D STEP file](pathname:///3d/gdl-acfan-b.step)<br/>
-
+• BrainPower base board with rechargeable battery.<br/>
+• Wrist strap.<br/>
+• Screwdriver.<br/>
+• Screws.<br/>
+• Reusable case.<br/>
 
 </td></table>
-</TabItem>
-
-<TabItem value="projects">Coming soon!</TabItem>
-
-</Tabs>
-
-
 
 
 ---
@@ -91,7 +80,7 @@ Take your Arcade on-the-go with this rechargeable battery option. It includes a 
   ## Ordering Info
 </p>
 
-| Description | Part Number | Price  |
-| ----------- | ----------- | ------ |
-| BrainPower Arcade power adapter   | BPK-PWR-2 | $39.95 |
+| Description | Part Number | Price  | Buy
+| --- | --- | --- | ---
+| BrainPower Adapter   | BPK-PWR-2 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
 
