--- a/docs/catalog/intro.mdx
+++ b/docs/catalog/intro.mdx
@@ -14,8 +14,6 @@ import "react-medium-image-zoom/dist/styles.css";
 
 # Product Catalog
 
-## Devices
-
 <div style={{display: 'block',  justifyContent: 'center', alignItems: 'center', textAlign: 'center'}}>
 
 <table>
@@ -26,7 +24,7 @@ import "react-medium-image-zoom/dist/styles.css";
     Microcomputer with Color Screen 
     <Button
     style={{ margin: "10px" }}
-    label="Arcade V2"
+    label="BrainPad Arcade"
     link="arcade"
     />
 </td>
@@ -62,7 +60,7 @@ import "react-medium-image-zoom/dist/styles.css";
     Microcomputer with Edge Connector 
     <Button
     style={{ margin: "10px" }}
-    label="Pulse"
+    label="BrainPad Pulse"
     link="pulse"
     />
 </td>
