--- a/docs/catalog/pulse.mdx
+++ b/docs/catalog/pulse.mdx
@@ -66,9 +66,10 @@ The BrainPad Pulse STEMS (pun intended) from the need for an evolving coding boa
 </td><td width='50%'>
 **Resources**
 
-📄[Schematics](pathname:///sch/gdl-acfan-b.pdf)<br/>
-🔩[3D STEP file](pathname:///3d/gdl-acfan-b.step)<br/>
+📚[MakeCode for BrainbPad Pulse](pathname:///ebook/MakeCode-for-BrainPad.pdf)<br/>
+
 </td></table>
+
 <div class="videocontainer">
     <iframe class="responsive-width" 
         src="https://www.youtube.com/embed/2E7ozsdbIds" 
@@ -109,7 +110,7 @@ Alligator (crocodile) clip wires give the user an easy way to connect your Brain
 
 ---
 
-## Start Playing ➡ coding!
+## Start Playing ➡ Coding!
 
 ![Pulse Display](pathname:///img/microsoft-makecode.png)
 
@@ -136,4 +137,4 @@ Microsoft MakeCode is the tool of choice for educators to work with BrainPad Pul
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| BrainPAd Pulse Microcomputer   | BPC-PULSE-D | $39.95 | <Button  style={{ margin: "10px" }}  label="Buy on Amazon"  link="https://www.amazon.com/dp/B0CL4ZCN53"/>
+| BrainPad Pulse Microcomputer   | BPC-PULSE-D | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
