--- a/docs/catalog/sensor-kit.mdx
+++ b/docs/catalog/sensor-kit.mdx
@@ -94,7 +94,7 @@ image
 ## Ordering Info
 </p>
 
-| Description | Part Number | Price  |
-| ----------- | ----------- | ------ |
-| DUELink Sensor Kit   | BPK-SENSE-A | $59.95 |
+| Description | Part Number | Price  | Buy
+| ----------- | ----------- | ------ | ---
+| DUELink Sensor Kit   | BPK-SENSE-A | $59.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
 
