--- a/docs/catalog/brainclip.mdx
+++ b/docs/catalog/brainclip.mdx
@@ -15,13 +15,13 @@ import "react-medium-image-zoom/dist/styles.css";
 <div style={{ textAlign: "center" }}>
 
 <Zoom>
-<img alt="Main" width="75%" src="/img/catalog/brainclip-pulse-clips.png" />
+<img alt="Main" width="75%" src="/img/catalog/brainclip-joystick.gif" />
 </Zoom>
 
   <table>
     <td>
       <Zoom>
-        <img alt="Back" src="/img/catalog/arcade-v2-back.jpg" />
+        <img alt="Back" src="/img/catalog/brainclip-pulse-clips.png" />
       </Zoom>
     </td>
     <td>
@@ -31,50 +31,52 @@ import "react-medium-image-zoom/dist/styles.css";
     </td>
     <td>
       <Zoom>
-        <img alt="Front" src="/img/catalog/arcade-v2-front45.jpg" />
+        <img alt="Front" src="/img/catalog/brainclip-modules.jpg" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Back" src="/img/catalog/arcade-v2-packaging.png" />
+        <img alt="Back" src="/img/catalog/brainclip-all.png" />
       </Zoom>
     </td>
   </table>
-  <p>**BrainPad Arcade V2 Microcomputer**</p>
+  <p>**Clip wires with multiple circuit modules.**</p>
 </div>
 
 
 
 ---
 
-“Don’t just play games, make them” is the mentality behind BrainPad Arcade. With the full support of <strong>Microsoft MakeCode Arcade</strong>, users can build hundreds of arcade-style games. Go beyond games to use sensors and learn about circuits, or even build robots!
+Coding circuits was never easier. The BrainClip Kit uses alligator clips to easily connect to any BrainPad.
+
 <table><td width='50%'>
 **Key features**
 
-• Microsoft MakeCode Arcade Ready.<br/>
-• 1.8″ 160×120 Color Display.<br/>
-• Jacdac Connector.<br/>
-• DUELink Connector.<br/>
-• Alligator-Clip Pads to Connect Circuits.<br/>
-• Buzzer Speaker.<br/>
-• 8x User Buttons.<br/>
-• Includes USB Cable.<br/>
-• Includes Carrying Case.<br/>
+• Solderless connections using clips.<br/>
+• Several sensors for understanding inputs from the physical world into the “brain”.<br/>
+• Several outputs for understanding how the “brain” controls the physical world.<br/>
+• Remote control for wireless control.<br/>
+
 </td><td width='50%'>
-**Resources**
 
-📄[Schematics](pathname:///sch/gdl-acfan-b.pdf)<br/>
-🔩[3D STEP file](pathname:///3d/gdl-acfan-b.step)<br/>
+**Kit Content**
+
+• Color LED light<br/>
+• Color LED ring with 8x individually controllable lights<br/>
+• Distance sensor<br/>
+• Light sensor<br/>
+• Buzzer speaker<br/>
+• Red button<br/>
+• Green button<br/>
+• Sound sensor<br/>
+• Analog rocker module<br/>
+• Motion detector<br/>
+• Infrared receiver<br/>
+• Infrared remote control (battery included)<br/>
+• 10x alligator clip wires<br/>
+• Reusable case<br/>
+
 </td></table>
-<div class="videocontainer">
-    <iframe class="responsive-width" 
-        src="https://www.youtube.com/embed/0nTYkD6aCSc" 
-        frameborder="0"
-        allowfullscreen>
-    </iframe>
-</div>
-
----
 
 ---
 
@@ -90,4 +92,4 @@ import "react-medium-image-zoom/dist/styles.css";
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| BrainPad Arcade Microcomputer   | BPC-ARCADE-AR2B | $39.95 | <Button  style={{ margin: "10px" }}  label="Buy on Amazon"  link="https://www.amazon.com/dp/B0CL4ZCN53"/>
+| BrainClip Kit   | BPK-CLIP-2 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
