ready for final checks

--- a/docs/catalog/brainsense.mdx
+++ b/docs/catalog/brainsense.mdx
@@ -21,60 +21,69 @@ import "react-medium-image-zoom/dist/styles.css";
   <table>
     <td>
       <Zoom>
-        <img alt="Back" src="/img/catalog/arcade-v2-back.jpg" />
+        <img alt="Back" src="/img/catalog/brainsense-back.png" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Size" src="/img/catalog/arcade-v2-clip.jpg" />
+        <img alt="Size" src="/img/catalog/brainsense-left.png" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Front" src="/img/catalog/arcade-v2-front45.jpg" />
+        <img alt="Front" src="/img/catalog/brainsense-right.png" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Back" src="/img/catalog/arcade-v2-packaging.png" />
+        <img alt="Back" src="/img/catalog/brainsense-case.png" />
       </Zoom>
     </td>
   </table>
-  <p>**BrainPad Arcade V2 Microcomputer**</p>
+  <p>**Smart House with Sensors**</p>
 </div>
 
 
 
 ---
 
-“Don’t just play games, make them” is the mentality behind BrainPad Arcade. With the full support of <strong>Microsoft MakeCode Arcade</strong>, users can build hundreds of arcade-style games. Go beyond games to use sensors and learn about circuits, or even build robots!
+BrainSense kit is an excellent demonstration of how smart homes and connected cities are built. It includes several sensors and actuators to sense and control the surrounding environment.
+
+![pulse](pathname:///img/catalog/brainsense-kit.jpg)
+
 <table><td width='50%'>
 **Key features**
 
-• Microsoft MakeCode Arcade Ready.<br/>
-• 1.8″ 160×120 Color Display.<br/>
-• Jacdac Connector.<br/>
-• DUELink Connector.<br/>
-• Alligator-Clip Pads to Connect Circuits.<br/>
-• Buzzer Speaker.<br/>
-• 8x User Buttons.<br/>
-• Includes USB Cable.<br/>
-• Includes Carrying Case.<br/>
+• Environment Sensors.<br/>
+• Motors.<br/>
+• Sound Alarm.<br/>
+• Use included “house” or make your own!<br/>
+• Assembled house fits inside case.<br/>
+
 </td><td width='50%'>
-**Resources**
 
-📄[Schematics](pathname:///sch/gdl-acfan-b.pdf)<br/>
-🔩[3D STEP file](pathname:///3d/gdl-acfan-b.step)<br/>
+**Kit Content**
+• Laser Cut Wood House.<br/>
+• Controller Board.<br/>
+• Alarm Speaker.<br/>
+• RGB LEDs.<br/>
+• Flame Sensor.<br/>
+• DC Fan Motor.<br/>
+• Steam Sensor.<br/>
+• Motion Sensor.<br/>
+• Light Sensor.<br/>
+• Temperature & Humidity Sensor.<br/>
+• Soil Moisture Sensor.<br/>
+• Battery Holder.<br/>
+• USB Cable.<br/>
+• 10x Sensor connecting wires.<br/>
+• Screws, Nuts, Screwdriver.<br/>
+• Door and Servo Motor.<br/>
+• Reusable storage case.<br/>
+
 </td></table>
-<div class="videocontainer">
-    <iframe class="responsive-width" 
-        src="https://www.youtube.com/embed/0nTYkD6aCSc" 
-        frameborder="0"
-        allowfullscreen>
-    </iframe>
-</div>
 
----
+
 
 ---
 
@@ -90,4 +99,4 @@ import "react-medium-image-zoom/dist/styles.css";
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| BrainPad Arcade Microcomputer   | BPC-ARCADE-AR2B | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
+| BrainSense Kit   | BPK-SENSE-1 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
