--- a/docs/resources/intro.mdx
+++ b/docs/resources/intro.mdx
@@ -8,4 +8,19 @@ import TabItem from "@theme/TabItem";
 
 # Resources
 
-With the BrainPad's PLAY|CODE|EXCEL, we want student to "play" first. Let them enjoy the world of coding and, before they know it, they would find themselves building games and accessing the world of physical computing.
+
+<div style={{ textAlign: "center" }}>
+
+  <table>
+    <td width='50%'>
+        <img alt="Back" src="/img/catalog/arcade-v2-front.jpg" />
+        Use Make Code arcade with BrainPad Arcade.
+        <Button  style={{ margin: "10px" }}  label="MakeCode Arcade"  link="makecode-arcade"/>
+    </td>
+    <td width='50%'>
+        <img alt="Size" src="/img/catalog/pulse-front.png" />
+        Use MakeCode with BrainPad Pulse.
+        <Button  style={{ margin: "10px" }}  label="MakeCode"  link="makecode"/>
+    </td>
+  </table>
+</div>
