--- a/docs/catalog/arcade.mdx
+++ b/docs/catalog/arcade.mdx
@@ -116,4 +116,4 @@ The BrainPower backpack is another elegant option for powering BrainPad Arcade. 
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| BrainPad Arcade Microcomputer   | BPC-ARCADE-AR2B | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
+| BrainPad Arcade Microcomputer   | BPC-ARCADE-AR2B | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/buy"/>
