--- a/docs/catalog/brainbot.mdx
+++ b/docs/catalog/brainbot.mdx
@@ -91,4 +91,4 @@ BrainBot includes everything needed to get you started on coding robots. It work
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| BrainBot Kit   | BPK-BOT-2 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
+| BrainBot Kit   | BPK-BOT-2 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/buy"/>
