--- a/docs/catalog/brainclip.mdx
+++ b/docs/catalog/brainclip.mdx
@@ -92,4 +92,4 @@ Coding circuits was never easier. The BrainClip Kit uses alligator clips to easi
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| BrainClip Kit   | BPK-CLIP-2 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
+| BrainClip Kit   | BPK-CLIP-2 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/buy"/>
