--- a/docs/catalog/braingamer.mdx
+++ b/docs/catalog/braingamer.mdx
@@ -84,4 +84,4 @@ We think you will find the best game out there is the game you make yourself. Br
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| BrainGamer Kit   | BPK-GMR-2 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
+| BrainGamer Kit   | BPK-GMR-2 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/buy"/>
