--- a/docs/catalog/brainpower.mdx
+++ b/docs/catalog/brainpower.mdx
@@ -82,5 +82,5 @@ Take your Arcade on-the-go with this rechargeable battery option. It includes a 
 
 | Description | Part Number | Price  | Buy
 | --- | --- | --- | ---
-| BrainPower Adapter   | BPK-PWR-2 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
+| BrainPower Adapter   | BPK-PWR-2 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/buy"/>
 
