--- a/docs/catalog/brainsense.mdx
+++ b/docs/catalog/brainsense.mdx
@@ -99,4 +99,4 @@ BrainSense kit is an excellent demonstration of how smart homes and connected ci
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| BrainSense Kit   | BPK-SENSE-1 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
+| BrainSense Kit   | BPK-SENSE-1 | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/buy"/>
