--- a/docs/catalog/pulse.mdx
+++ b/docs/catalog/pulse.mdx
@@ -137,4 +137,4 @@ Microsoft MakeCode is the tool of choice for educators to work with BrainPad Pul
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| BrainPad Pulse Microcomputer   | BPC-PULSE-D | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/order"/>
+| BrainPad Pulse Microcomputer   | BPC-PULSE-D | $39.95 | <Button  style={{ margin: "10px" }}  label="Where to Buy"  link="/buy"/>
